# contest-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  build.sh  docker-compose.yml  nginx.conf  package-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2024-09-18_51923aa19fd2_.py  2024-11-06_2de8334beaf4_.py  2024-12-04_e7d796d0ce32_.py  2025-02-03_a921441e8635_.py
backend/src/: admin.py  api.py  config.py  database.py  main.py  models.py  redis_cache.py  s3.py
backend/src/ai_chat/: schemas.py  service.py  views.py
backend/src/auth/: exceptions.py  models.py  roles.py  schemas.py  service.py  views.py
backend/src/contest/: exceptions.py  models.py  schemas.py  service.py  views.py
backend/src/problem/: exceptions.py  models.py  schemas.py  service.py  views.py
backend/src/submission/: exceptions.py  models.py  schemas.py  service.py  views.py
backend/src/templates/sqladmin/: custom_create.html  custom_edit.html
backend/tests/: conftest.py
backend/tests/api/: test_auth_api.py
backend/tests/unit/: test_auth_unit.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.css  App.tsx  api.tsx  dto.tsx  index.css
frontend/src/components/CodeEditor/: CodeEditor.tsx
frontend/src/components/Combobox/: Combobox.tsx  ProgrammingLanguageCombobox.tsx  YearCombobox.tsx
frontend/src/components/ContestCard/: ContestCard.tsx
frontend/src/components/ExtendedActivityCalendar/: ExtendedActivityCalendar.tsx
frontend/src/components/Leaderboard/: Leaderboard.tsx
frontend/src/components/LoginForm/: LoginForm.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/PagintationOverflow/: PaginationOverflow.tsx
frontend/src/components/PieChart/: ProblemPieChart.tsx
frontend/src/components/ProblemCard/: ProblemCard.tsx
frontend/src/components/SubmissionList/: SubmissionList.tsx
frontend/src/components/Timer/: Timer.tsx
frontend/src/components/UploadAvatar/: UploadAvatar.tsx
frontend/src/components/ui/: chat-support.tsx  (+2 more)
frontend/src/pages/: ContestList.tsx  ContestPage.tsx  LoginForm.tsx  ProblemList.tsx  ProblemPage.tsx  ProblemSet.tsx  SignUpForm.tsx  UserProfile.tsx
frontend/src/store/: atoms.tsx
(+2 files in other folders)
