[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jduun <isaevstanislav2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
pydantic = "^2.9.1"
sqlalchemy = "^2.0.34"
python-multipart = "^0.0.9"
itsdangerous = "^2.2.0"
sqladmin = "^0.20.1"
aiobotocore = "^2.19.0"
redis = {extras = ["asyncio"], version = "^5.2.1"}
aioredis = "^2.0.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"
faker = "^37.0.0"
aiosqlite = "^0.21.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I001",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["UP035"]
"src/auth/models.py" = ["F821"]
"src/contest/models.py" = ["F821"]
"src/submission/models.py" = ["F821"]
"src/problem/models.py" = ["F821"]